# Distributed

./: ._echo.php
Lab_1/: client.hi  client.hs  send.sh
chat-server/chat-server/: chat-server.cabal  docker-compose.yml  stack.yaml
chat-server/chat-server/.stack-work/install/be9a2133/flag-cache/: attoparsec-iso8601-1.0.0.0-D38bMJw6YNS3DFLMqXWAd7  bson-generic-0.0.8-HCUlC9mFzScEiZ90dYsZ4F  cache-0.1.0.0-3EX2t6x9vuT3EEHWLsZOIF  chat-server-0.1.0.0-4sJEkmMS85O6KnzAqqWnLO  chat-server-0.1.0.0-GJ1U7OVEj0n9OmIRzIgU3z  chat-server-0.1.0.0-IhGawY05mZoGq6On28WYfw  chat-server-0.1.0.0-L9p28abDyEm3TYzJG3hRzw  clock-0.7.2-1F3tpzhSilhF4wqwyRWqgE  distributed-api-0.1.0.0-7NtNo0EikbS77OpyCFxiEq  either-4.4.1.1-1JTyD8xndhVAzIXQKhnRWZ  free-4.12.4-Etm59Dm8iExFxAy1L49Ovd  http-api-data-0.3.7-8Z2uJrVb2ub4YvmXJD4I6a  natural-transformation-0.4-EccBWNksrsOH5qWsAPnoy6  prelude-extras-0.4.0.3-FAyB4iuuM7cHXdrLMZtdXq  profunctors-5.2-2ZZOz6u59T2H8y7z3NgZkY  servant-0.10-5HnZUYPBNR3GtD7NO3QbFO  servant-client-0.10-KR0oN4phGnNHTB7sH5N9Nx  servant-server-0.10-FGsfkxp1oWZBZjQPk6ic3o
chat-server/chat-server/.stack-work/install/be9a2133/lib/i386-windows-ghc-8.0.1/chat-server-0.1.0.0-4sJEkmMS85O6KnzAqqWnLO/: Lib.hi
chat-server/chat-server/.stack-work/install/be9a2133/lib/i386-windows-ghc-8.0.1/chat-server-0.1.0.0-GJ1U7OVEj0n9OmIRzIgU3z/: Lib.hi
chat-server/chat-server/.stack-work/install/be9a2133/lib/i386-windows-ghc-8.0.1/chat-server-0.1.0.0-IhGawY05mZoGq6On28WYfw/: Lib.hi
chat-server/chat-server/.stack-work/install/be9a2133/lib/i386-windows-ghc-8.0.1/chat-server-0.1.0.0-L9p28abDyEm3TYzJG3hRzw/: Lib.hi
chat-server/chat-server/.stack-work/install/be9a2133/lib/i386-windows-ghc-8.0.1/distributed-api-0.1.0.0-7NtNo0EikbS77OpyCFxiEq/: DistributedAPI.hi
chat-server/chat-server/.stack-work/install/be9a2133/pkgdb/: attoparsec-iso8601-1.0.0.0-D38bMJw6YNS3DFLMqXWAd7.conf  bson-generic-0.0.8-HCUlC9mFzScEiZ90dYsZ4F.conf  chat-server-0.1.0.0-1zbNW71mQi559zKXSdk6GU.conf  distributed-api-0.1.0.0-7NtNo0EikbS77OpyCFxiEq.conf  http-api-data-0.3.7-8Z2uJrVb2ub4YvmXJD4I6a.conf  natural-transformation-0.4-EccBWNksrsOH5qWsAPnoy6.conf  package.cache  servant-0.10-5HnZUYPBNR3GtD7NO3QbFO.conf  servant-client-0.10-KR0oN4phGnNHTB7sH5N9Nx.conf  servant-server-0.10-FGsfkxp1oWZBZjQPk6ic3o.conf
chat-server/chat-server/app/: Main.hs
chat-server/chat-server/src/: Lib.hs
distributed file system/client-proxy/: README.md  client-proxy.cabal  run.sh  stack.yaml
distributed file system/client-proxy/.stack-work/install/be9a2133/flag-cache/: StateVar-1.1.0.4-CJpWsiXJdd89SnV9dZtTwc  bifunctors-5.4.1-8Xk5Wsnk1fr6rBLkW9MO8p  bson-0.1.7-F7Gw0W60rid2pTPZyexKOK  bson-generic-0.0.6-r4eH06G7Ea3YdJH4hYkQt  cabal-file-th-0.2.3-LUekrMgzRjS3hvN7VcGmSj  cipher-des-0.0.6-JETGUne6HJT3d63L84eK1G  client-proxy-0.1.0.0-1447ZQQWIZHI37AYvbNiCV  client-proxy-0.1.0.0-LeYUP7jM43Y29Qcfh1C6db  compact-string-fix-0.3.2-DndIO7hdLRnH1KEjhXPArZ  cryptocipher-0.6.2-DkLYwmdC7WM7XbnK4VOo0o  distributed-api-0.1.0.0-CvLTeDeSx7tNJ73h322tv  distributive-0.5.0.2-Cdz2vLOk85j1doGXLcictT  ed25519-0.0.5.0-CpxZaSit3v24CALRG61NQp  http-api-data-0.3.7-8Z2uJrVb2ub4YvmXJD4I6a  servant-client-0.10-KR0oN4phGnNHTB7sH5N9Nx  servant-server-0.10-FGsfkxp1oWZBZjQPk6ic3o  tar-0.5.0.3-Lj53UbIqLpELgGWYmsAfKo
distributed file system/client-proxy/.stack-work/install/be9a2133/lib/i386-windows-ghc-8.0.1/client-proxy-0.1.0.0-1447ZQQWIZHI37AYvbNiCV/: Lib.hi
distributed file system/client-proxy/.stack-work/install/be9a2133/lib/i386-windows-ghc-8.0.1/client-proxy-0.1.0.0-3aaDK7fyEWKDEbeS9ZaLvU/: Lib.hi
distributed file system/client-proxy/.stack-work/install/be9a2133/lib/i386-windows-ghc-8.0.1/client-proxy-0.1.0.0-B8pvFfJP2C41EreX7p6e2k/: Lib.hi
distributed file system/client-proxy/.stack-work/install/be9a2133/lib/i386-windows-ghc-8.0.1/client-proxy-0.1.0.0-DRJ1wecYUbnJj84xXlDGlT/: Lib.hi
distributed file system/client-proxy/.stack-work/install/be9a2133/pkgdb/: attoparsec-iso8601-1.0.0.0-D38bMJw6YNS3DFLMqXWAd7.conf  bson-generic-0.0.8-HCUlC9mFzScEiZ90dYsZ4F.conf  compact-string-fix-0.3.2-DndIO7hdLRnH1KEjhXPArZ.conf  distributed-api-0.1.0.0-7NtNo0EikbS77OpyCFxiEq.conf  http-api-data-0.3.7-8Z2uJrVb2ub4YvmXJD4I6a.conf  natural-transformation-0.4-EccBWNksrsOH5qWsAPnoy6.conf
distributed file system/client-proxy/app/: Main.hs
distributed file system/client-proxy/files/: asd.com
distributed file system/client-proxy/src/: AuthLib.hs  Lib.hs  test.hs
distributed file system/distributed-api/: README.md  distributed-api.cabal  stack.yaml
distributed file system/distributed-api/src/: CryptoAPI.hs  DatabaseAPI.hs  DistributedAPI.hs  DistributedAPIClient.hs
distributed file system/lock-server/: README.md  docker-compose.yml  lock-server.cabal  run.sh  stack.yaml
distributed file system/lock-server/src/: Lib.hs
distributed file system/security-server/: docker-compose.yml  run.sh  security-server.cabal  stack.yaml
distributed file system/security-server/.stack-work/install/be9a2133/flag-cache/: attoparsec-iso8601-1.0.0.0-D38bMJw6YNS3DFLMqXWAd7  bson-generic-0.0.8-HCUlC9mFzScEiZ90dYsZ4F  crypto-simple-0.1.0.0-3HfmuL4SM0e1ih5KC68uyl  distributed-api-0.1.0.0-7NtNo0EikbS77OpyCFxiEq  entropy-0.3.7-2Hc694EYwMYZfTTTYJYDd  http-api-data-0.3.7-8Z2uJrVb2ub4YvmXJD4I6a  natural-transformation-0.4-EccBWNksrsOH5qWsAPnoy6  servant-0.10-5HnZUYPBNR3GtD7NO3QbFO  servant-client-0.10-KR0oN4phGnNHTB7sH5N9Nx  servant-server-0.10-FGsfkxp1oWZBZjQPk6ic3o
distributed file system/security-server/.stack-work/install/be9a2133/pkgdb/: attoparsec-iso8601-1.0.0.0-D38bMJw6YNS3DFLMqXWAd7.conf  bson-generic-0.0.8-HCUlC9mFzScEiZ90dYsZ4F.conf  crypto-simple-0.1.0.0-3HfmuL4SM0e1ih5KC68uyl.conf  distributed-api-0.1.0.0-7NtNo0EikbS77OpyCFxiEq.conf  http-api-data-0.3.7-8Z2uJrVb2ub4YvmXJD4I6a.conf  natural-transformation-0.4-EccBWNksrsOH5qWsAPnoy6.conf  package.cache  security-server-0.1.0.0-6xrqt9962SHSZspL10yzh.conf  servant-0.10-5HnZUYPBNR3GtD7NO3QbFO.conf  servant-client-0.10-KR0oN4phGnNHTB7sH5N9Nx.conf  servant-server-0.10-FGsfkxp1oWZBZjQPk6ic3o.conf
distributed file system/security-server/src/: Lib.hs
(+650 files in other folders)
