name:                chat-server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/glagolef/Distributed/chat-server#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          glagolef@tcd.ie
copyright:           2017 Phil Glagolevschi
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bson >=0.3 && <0.4
                     , bson-generic
                     , directory
                     , ghc-prim
                     , transformers
                     , wai
                     , warp
                     , wai-logger
                     , mongoDB
                     , hslogger
                     , time
                     , resourcet
                     , text
                     , bytestring
                     , mtl
                     , http-client
                     , http-api-data
                     , stm
                     , either
                     , hashable
                     , network
                     , cache

  default-language:    Haskell2010

executable chat-server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , directory
                     , chat-server
  default-language:    Haskell2010

test-suite chat-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base 
                     , chat-server
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
                     
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/glagolef/Distributed/chat-server
