name:                client-proxy
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/client-proxy#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          glagolef@tcd.ie
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , AuthLib
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , servant
                     , servant-client >= 0.9
                     , servant-server
                     , http-client
                     , optparse-applicative
                     , cabal-file-th
                     , pretty
                     , Cabal
                     , ansi-terminal
                     , bson-generic
                     , aeson
                     , template-haskell
                     , text
                     , time
                     , split
                     , transformers
                     , http-api-data
                     , distributed-api
                     , bytestring
                     , git-embed
                     , pretty
                     , optparse-applicative
                     , Cabal
                     , ansi-terminal
                     , cache
                     , clock

  default-language:    Haskell2010

executable client-proxy-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , directory
                     , client-proxy
                     , distributed-api
                     , cache
                     , text
  default-language:    Haskell2010

test-suite client-proxy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base 
                     , client-proxy
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
                     
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/client-proxy
