name:                distributed-api
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            

author:              
maintainer:          
copyright:           2016
category:            test
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , DistributedAPI
                     , DistributedAPIClient
                     , DatabaseAPI
                     , CryptoAPI
  build-depends:       base >= 4.7 && < 5
                     , servant
                     , servant-client
                     , servant-server
                     , bson-generic
                     , aeson
                     , time
                     , text
                     , wai-logger
                     , mongoDB
                     , hslogger
                     , time
                     , resourcet
                     , text
                     , bytestring
                     , bson
                     , mtl
                     , crypto-simple
                     , ansi-terminal
                     , template-haskell
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/glagolef/Distributed/tree/master/distributed%20file%20system/distributed-api
