name:                distributed-api
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            

author:              Phil Glagolevschi
maintainer:          
copyright:           2016
category:            test
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DistributedAPI
                     , DistributedAPIClient
                     , DatabaseAPI
                     , CryptoAPI
  build-depends:       base >= 4.7 && < 5
                     , servant
                     , servant-client
                     , servant-server
                     , bson-generic
                     , aeson
                     , time
                     , text
                     , wai-logger
                     , mongoDB
                     , hslogger
                     , time
                     , resourcet
                     , text
                     , bytestring
                     , bson
                     , mtl
                     , crypto-simple
                     , ansi-terminal
                     , template-haskell
                     , hashable
                     , containers
                     , split
                     , cache
                     , http-client
                     , suspend
  default-language:    Haskell2010

