name:                lock-server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/lock-server#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          glagolef@tcd.ie
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bson >=0.3 && <0.4
                     , directory
                     , ghc-prim
                     , servant
                     , servant-server ==0.10
                     , servant-client
                     , transformers
                     , wai
                     , warp
                     , wai-logger
                     , mongoDB
                     , hslogger
                     , time
                     , resourcet
                     , text
                     , bytestring
                     , mtl
                     , http-client
                     , http-api-data
                     , distributed-api
                     , suspend

  default-language:    Haskell2010

executable lock-server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , directory
                     , lock-server
  default-language:    Haskell2010

test-suite lock-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base 
                     , lock-server
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
                     
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/lock-server
